--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,8 +1,9 @@
 <div [ngClass]="setClasses()">
     <p>
-        <input type="checkbox" />
+        <input (change)="onToggle(todo)" type="checkbox" />
         {{ todo.title}}
-        <button class="del">x</button>
+        <button (click)="onDelete(todo)" class="del">X</button>
     </p>
 </div>
 
+        
