--- a/src/app/components/todo-item/todo-item.component.css
+++ b/src/app/components/todo-item/todo-item.component.css
@@ -1,4 +1,4 @@
-  
+/*   
 .del {
     background: #ff0000;
     color: #fff;
@@ -17,4 +17,4 @@
   
   .is-complete {
     text-decoration: line-through;
-  }
+  } */
