--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,4 +1,16 @@
-<div [ngClass]="setClasses()">
+<!-- <div [ngClass]="setClasses()">
+    <p class="is-complete">
+        {{ todo.title}}
+    </p>
+
+    <p class="is-not-complete">
+        {{ todo.title }}
+    </p>
+</div> -->
+
+        
+
+<!-- <div [ngClass]="setClasses()">
     <p>
         <input (change)="onToggle(todo)" type="checkbox" />
         {{ todo.title}}
@@ -6,4 +18,5 @@
     </p>
 </div>
 
-        
+         -->
+
